unpackaged/main/default/objects/ETT_Staging_Bank_Reference__c/ETT_Staging_Bank_Reference__c.object-meta.xml
<CustomObject>
    <label>Staging Bank Reference</label>
    <nameField>
        <displayFormat>SBRN-{0000}</displayFormat>
        <label>Staging Bank Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Bank Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>