unpackaged/main/default/objects/ETT_Staging_Bank_Reference__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Bank Reference</relationshipLabel>
    <relationshipName>Staging_Bank_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>