unpackaged/main/default/objects/ETT_Staging_Bank_Reference__c/fields/ETT_Starting_With__c.field-meta.xml
<CustomField>
    <fullName>ETT_Starting_With__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Starting With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>